--- a/src/components/TodoHeader/TodoHeader.module.css
+++ b/src/components/TodoHeader/TodoHeader.module.css
@@ -1,8 +1,9 @@
 .Content {
     display: flex;
     flex-direction: row;
-    background-color: #ffd666;
-    border: 2px solid #fa8c16;
+    background-color: #99c9ff;
+    border: 2px solid #99c9ff;
+    
     text-align: center;
     align-items: center;
     z-index: 200;
@@ -12,7 +13,8 @@
     flex-grow: 1;
     text-align: center;
     width: 100px;
-    border-right: 2px solid #ffd666;
+    
+   
    
 }
 
@@ -29,19 +31,19 @@
     flex-grow: 1;
     width: 100px;
     text-align: center;
-    border-left: 2px solid #ffd666;
+   
     color:#ffd666;
     
 }
 
 .h1 {
  margin: 0;
- color: #874d00;
+ color: #dfd6be;
  
 }
 
 .open {
     margin: 0;
-    color: #874d00;
+    color: #dfd6be;
     cursor: pointer;
 }
