--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -1,25 +1,27 @@
 .Input {
-    width: 100%;
-    padding: 10px;
-    box-sizing: border-box;
+  width: 100%;
+  padding: 1.5rem;
+  box-sizing: border-box;
 }
 
 .Label {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .InputElement {
-    outline: none;
-    border: 3px solid #ad4e00;
-    background-color: #fff7e6;
-    padding: 6px 10px;
-    display: block;
-    width: 100%;
-    
+  outline: none;
+  background-color: #2b2627;
+  padding: 6px 10px;
+  display: block;
+  height: 3rem;
+  width: 100%;
+  box-shadow: inset 2px 2px 5px rgba(154, 147, 140, 0.5),
+    1px 1px 5px rgba(255, 255, 255, 1);
 }
 
 .InputElement:focus {
-    outline: none;
-    background-color: #ffd666;
-    border: 3px solid #722ed1;
+  outline: none;
+  background-color: #525051;
+  border: 3px solid #dfd6be;
+  transition: all 0.5s ease-out;
 }
