--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,8 +1,10 @@
 .Content {
-    margin-top: 72px;
-    max-width: 450px;
+    margin-top: 100px;
+    width: 46rem;
+    height: 86rem;
     margin-left: auto;
     margin-right: auto;
-    z-index: 300;
-    overflow-y: auto;
+    z-index: 200;
+    overflow: initial;
+    
 }
