--- a/src/components/Navigation/NavigationItem.module.css
+++ b/src/components/Navigation/NavigationItem.module.css
@@ -7,7 +7,7 @@
 }
 
 .NavigationItem a {
-    color: #ffd666;
+    color: #dfd6be;
     text-decoration: none;
     height: 100%;
     padding: 16px 10px;
@@ -19,6 +19,7 @@
 .NavigationItem a:hover,
 .NavigationItem a:active,
 .NavigationItem a.active {
-  background-color:#874d00;
-  border-bottom: 4px solid #722ed1;
+  background-color:#2b2627;
+  border-bottom: 4px solid #c82031;
+  transition: all 0.5s ease-out;
 }
