--- a/src/components/Toolbar/Toolbar.module.css
+++ b/src/components/Toolbar/Toolbar.module.css
@@ -1,10 +1,10 @@
 .Toolbar {
-    height: 56px;
+    height: 72px;
     width: 100%;
     position: fixed;
     top: 0;
     left: 0;
-    background-color: #fa541c;
+    background-color: #99c9ff;
     color: #ffd666;
     font-weight: bold;
     display: flex;
@@ -13,6 +13,7 @@
     padding: 0 40px;
     box-sizing: border-box;
     z-index: 300;
+    opacity: 0.8;
 }
 
 .Toolbar nav {
