--- a/src/containers/Auth/Auth.module.css
+++ b/src/containers/Auth/Auth.module.css
@@ -1,8 +1,9 @@
 .Auth {
-  margin: 20px auto;
+  margin: 3rem auto;
   width: 450px;
   text-align: center;
-  background-color: #fa8c16;
+  background-color: #dfd6be;
+  box-shadow: 0 14px 28px rgba(8, 8, 8, 0.25), 0 10px 10px rgba(8, 3, 3, 0.22);
   padding: 10px;
   box-sizing: border-box;
   color: teal;
@@ -10,14 +11,15 @@
 }
 
 .Form {
-  background-color: #ffd666;
+  background-color: #99c9ff;
   color: teal;
   z-index: 300;
 }
 .Button {
   margin-bottom: 10px;
   background: transparent;
-  background-color: #722ed1;
+  background-color: #c82031;
+  border-color: #c82031;
   z-index: 200;
 }
 .Button:focus {
