--- a/src/components/AppHeader/AppHeader.module.css
+++ b/src/components/AppHeader/AppHeader.module.css
@@ -9,11 +9,36 @@
     color: #dfd6be;
     width: 46rem;
     z-index: 200;
+    box-shadow: 0 14px 28px rgba(8, 8, 8, 0.25), 0 10px 10px rgba(8, 3, 3, 0.22);
+    transition: all 0.5s ease-out;
    
 }
- .ContentH1 {
-     font-size: 2.5rem;
+ .Content h1 {
+     font-size: 3.5rem;
      margin-bottom: 1.5rem;
      margin-top: 1.5rem;
      color: #dfd6be;
+     transition: all 0.5s ease-out;
  }
+
+ .ContentH1:hover {
+
+     color: #2b2627;
+     transition: all 0.5s ease-out;
+ }
+
+ .Content:hover {
+    background-color: #dfd6be;
+    transition: all 0.5s ease-out;
+ }
+
+ @media (max-width: 414px) {
+    .Content {
+       width: 25rem;
+    }
+
+    .Content h1 {
+        font-size: 2rem;
+    }
+  
+  }
