--- a/src/components/Backdrop/Backdrop.module.css
+++ b/src/components/Backdrop/Backdrop.module.css
@@ -1,16 +1,22 @@
 .Backdrop {
-  width: 100%;
+   width: 100%;
   height: 100vh;
   display: flex;
+ 
+  
+  z-index: 0;
+  /* overflow: hidden; */
+  background-image: cover;
   overflow: auto;
  
 }
 
 .Image {
-  position: absolute;
+   position: absolute;
   width: 100%;
   height: 100%;
   object-fit: cover;
-  top: 0;
+  top: 0; 
+  
   
 }
