--- a/src/components/Calendar/Calendar.module.css
+++ b/src/components/Calendar/Calendar.module.css
@@ -1,13 +1,55 @@
+@import url("https://fonts.googleapis.com/css2?family=Acme&display=swap");
+
 .Calendar {
+    font-size: 1.4rem;
+    font-family: 'Acme', sans-serif;
     margin-top: 12px;
-    max-width: 450px;
-    background-color: #ffd666;
-    border: 2px solid #fa8c16;
-    color: #874d00;
+    width: 46rem;
+    background-color: #ded9cd;;
+    border: 2px solid #dfd6be;
+    color: #2b2627;
     font-weight: bold;
     z-index: 200;
 }
-.Calendar1 {
-    width: 450px;
-    background: #e6fffb;
+
+.Calendar p {
+    margin: 1rem auto;
 }
+.Calendar1 {
+    font-family: 'Acme', sans-serif;
+    width: 46rem;
+    background: #8cb4e2;
+    color: #2b2627;
+    border: none;
+}
+
+@media (max-width: 736px) {
+    .Calendar {
+       width: 25rem;
+       height: 15rem;
+       margin-left: auto;
+       margin-right: auto;
+       border: none;
+    }
+
+    .Calendar1 {
+        font-size: 0.8rem;
+        width: 25rem;
+        
+    }
+  
+  }
+
+  @media (max-width: 414px) {
+    .Calendar {
+        height: 20rem;
+       border: 2px solid #dfd6be;
+    }
+
+    .Calendar1 {
+        font-size: 0.8rem;
+        width: 25rem;
+        
+    }
+  
+  }
