--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -17,6 +17,7 @@
   width: 100%;
   box-shadow: inset 2px 2px 5px rgba(154, 147, 140, 0.5),
     1px 1px 5px rgba(255, 255, 255, 1);
+  transition: all 0.5s ease-out;
 }
 
 .InputElement:focus {
