--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,10 +1,16 @@
 .Content {
-    margin-top: 100px;
-    width: 46rem;
-    height: 86rem;
-    margin-left: auto;
-    margin-right: auto;
-    z-index: 200;
-    overflow: initial;
-    
+  margin-top: 100px;
+  width: 46rem;
+  height: 86rem;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 200;
+  overflow: initial;
+}
+
+@media (max-width: 414px) {
+  .Content {
+     width: 25rem;
+  }
+
 }
