--- a/src/components/Navigation/NavigationItems.module.css
+++ b/src/components/Navigation/NavigationItems.module.css
@@ -4,5 +4,39 @@
     list-style: none;
     display: flex;
     align-items: center;
+    
     height: 100%;
 }
+
+@media (max-width: 940px) {
+    ul {
+        width: 50rem;
+    }
+    .NavigationItems {
+      
+      font-size: 1.8rem;
+      justify-content: space-between;
+    }
+  }
+
+  @media (max-width: 768px) {
+    ul {
+        width: 43rem;
+    }
+    .NavigationItems {
+      
+      font-size: 1.2rem;
+      justify-content: space-between;
+    }
+  }
+
+  @media (max-width: 414px) {
+    ul {
+        width: 24.8rem;
+    }
+    .NavigationItems {
+      
+      font-size: 1rem;
+      justify-content: space-between;
+    }
+  }
