--- a/src/containers/Organizer/Organizer.module.css
+++ b/src/containers/Organizer/Organizer.module.css
@@ -1,8 +1,14 @@
 .DataOrganizer {
-  margin: 5rem 0 5rem 0;
+  padding: 5rem 0 10rem 0;
   width: 46rem;
   display: flex;
   flex-direction: column;
-  box-shadow: 0 14px 28px rgba(8, 8, 8, 0.25), 0 10px 10px rgba(8, 3, 3, 0.22);
   z-index: 2;
+}
+
+@media (max-width: 714px) {
+  .DataOrganizer {
+     width: 25rem;
+  }
+
 }
