--- a/src/components/Backdrop/Backdrop.module.css
+++ b/src/components/Backdrop/Backdrop.module.css
@@ -1,22 +1,19 @@
 .Backdrop {
-   width: 100%;
+ margin-top: 3rem;
+  width: 100%;
   height: 100vh;
   display: flex;
- 
-  
   z-index: 0;
-  /* overflow: hidden; */
-  background-image: cover;
+  background-position: center;
   overflow: auto;
- 
 }
 
 .Image {
-   position: absolute;
+ 
+  position: absolute;
   width: 100%;
   height: 100%;
   object-fit: cover;
-  top: 0; 
-  
-  
+  top: 0;
+  /* opacity: 0.8; */
 }
