--- a/src/components/Navigation/NavigationItem.module.css
+++ b/src/components/Navigation/NavigationItem.module.css
@@ -22,8 +22,8 @@
 .NavigationItem a:hover,
 .NavigationItem a:active,
 .NavigationItem a.active {
-  color: #c82031;
-  background-color:#2b2627;
+  color:  #e760ba;
+  background-color:#f5bed8;
   /* border-radius: 40%; */
   /* border: 4px solid #dfd6be; */
   transition: all 0.5s ease-out;
