--- a/src/components/Backdrop/Backdrop.module.css
+++ b/src/components/Backdrop/Backdrop.module.css
@@ -1,15 +1,14 @@
 .Backdrop {
- margin-top: 3rem;
+  margin-top: 3rem;
   width: 100%;
   height: 100vh;
   display: flex;
   z-index: 0;
-  background-position: center;
+  background-image: cover;
   overflow: auto;
 }
 
 .Image {
- 
   position: absolute;
   width: 100%;
   height: 100%;
