--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -1,28 +1,32 @@
 .Input {
+  color: black;
   width: 100%;
   padding: 1.5rem;
   box-sizing: border-box;
 }
 
 .Label {
+  color: #e760ba;
+  outline: none;
+  outline-color: none;
   font-weight: bold;
 }
 
 .InputElement {
   outline: none;
-  background-color: #2b2627;
+  outline-color: none;
+  border-style: none;
+  background-color: #d9aae2;
   padding: 6px 10px;
   display: block;
   height: 3rem;
   width: 100%;
-  box-shadow: inset 2px 2px 5px rgba(154, 147, 140, 0.5),
-    1px 1px 5px rgba(255, 255, 255, 1);
   transition: all 0.5s ease-out;
 }
 
 .InputElement:focus {
   outline: none;
-  background-color: #525051;
-  border: 3px solid #dfd6be;
+  background-color: azure;
+  border: 3px solid azure;
   transition: all 0.5s ease-out;
 }
