--- a/src/components/Backdrop/Backdrop.module.css
+++ b/src/components/Backdrop/Backdrop.module.css
@@ -1,10 +1,10 @@
 .Backdrop {
-  margin-top: 3rem;
   width: 100%;
   height: 100vh;
   display: flex;
   z-index: 0;
   background-image: cover;
+  background-size: cover;
   overflow: auto;
 }
 
@@ -14,5 +14,6 @@
   height: 100%;
   object-fit: cover;
   top: 0;
+  overflow: auto;
   /* opacity: 0.8; */
 }
