--- a/src/components/Calendar/Calendar.module.css
+++ b/src/components/Calendar/Calendar.module.css
@@ -1,22 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Acme&display=swap");
 
 .Calendar {
+  margin: 3rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   font-size: 1.4rem;
   font-family: "Acme", sans-serif;
-  /* margin-top: 12px; */
   width: 46rem;
   height: 36rem;
-  /* background-color: #d28ce0; */
   background-color: #d9aae2;
   border: 2px solid #d9aae2;
   opacity: 0.85;
   color: #2b2627;
-  /* font-weight: bold; */
   z-index: 200;
+  box-shadow: 0 14px 28px rgba(8, 8, 8, 0.25), 0 10px 10px rgba(8, 3, 3, 0.22);
 }
 
 .Calendar p {
@@ -39,29 +38,41 @@
   border: none;
 }
 
-@media (max-width: 736px) {
+@media (max-width: 768px) {
   .Calendar {
-    width: 25rem;
-    height: 15rem;
+    width: 40rem;
+    height: 35rem;
     margin-left: auto;
     margin-right: auto;
     border: none;
   }
 
   .Calendar1 {
-    font-size: 0.8rem;
-    width: 25rem;
+    font-size: 1.2rem;
+    width: 30rem;
+    height: 23rem;
   }
 }
 
 @media (max-width: 414px) {
   .Calendar {
-    height: 20rem;
-    border: 2px solid #dfd6be;
+    width: 25rem ;
+    height: 21rem;
+    font-size: 1rem;
+   
+  }
+  .Calendar p {
+    margin: 0.3rem auto;
+    letter-spacing: 0, 5em;
+    word-spacing: 6px;
+   
   }
 
   .Calendar1 {
     font-size: 0.8rem;
-    width: 25rem;
+    width: 20rem;
+    height: 16rem;
   }
 }
+
+
