--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -3,14 +3,25 @@
   width: 46rem;
   height: 86rem;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: 8rem;
   z-index: 200;
   overflow: initial;
 }
 
-@media (max-width: 414px) {
+@media (max-width: 992px) {
+  .Content {
+    margin-right: auto;
+  }
+}
+
+/* @media screen and (min-width: 576px) {
+  .Content {
+    height: 19rem;
+  }
+} */
+/* @media (max-width: 414px) {
   .Content {
      width: 25rem;
   }
 
-}
+} */
