--- a/src/components/Navigation/NavigationItem.module.css
+++ b/src/components/Navigation/NavigationItem.module.css
@@ -1,8 +1,9 @@
 .NavigationItem {
+  height: 100%;
  margin: 0;
+ font-size: 1.2rem;
  box-sizing: border-box;
  display: flex;
- height: 100%;
  align-items: center;
  text-align: center;
 }
@@ -10,9 +11,8 @@
 .NavigationItem a {
     color: #2b2627;
     text-decoration: none;
-    /* height: 100%; */
     padding: 16px 10px;
-    border: 4px solid transparent;
+    border: 3px solid transparent;
     box-sizing: border-box;
     display: block;
     text-align: center;
@@ -24,7 +24,5 @@
 .NavigationItem a.active {
   color:  #e760ba;
   background-color:#f5bed8;
-  /* border-radius: 40%; */
-  /* border: 4px solid #dfd6be; */
   transition: all 0.5s ease-out;
 }
