--- a/src/components/TodoHeader/TodoHeader.module.css
+++ b/src/components/TodoHeader/TodoHeader.module.css
@@ -1,13 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Acme&display=swap");
 
 .Content {
+  font-size: 1.1rem;
   display: flex;
   flex-direction: row;
+  align-items: center;
   background-color: #d9aae2;
-  border: 2px solid #f5bed8;
   font-family: "Acme", sans-serif;
   text-align: center;
-  align-items: center;
   z-index: 200;
 }
 
@@ -28,7 +28,9 @@
   flex-grow: 1;
   width: 100px;
   text-align: center;
-  color: #dfd6be;
+  background-color: #d9aae2;
+  border-width: none;
+  border-style: none;
 }
 
 .h1 {
@@ -50,6 +52,15 @@
 }
 
 .open:hover {
-    color: azure;
-    transition: all 0.5s ease-out;
+  color: azure;
+  transition: all 0.5s ease-out;
+}
+
+@media (max-width: 414px) {
+  .Content {
+    font-size: 0.8rem;
+  }
+  .Button {
+    margin: 0.2rem;
+  }
 }
