--- a/src/containers/TodoListItem/TodoListItem.css
+++ b/src/containers/TodoListItem/TodoListItem.css
@@ -13,7 +13,6 @@
   padding-left: 10px;
   min-height: 2.5rem;
   font-size: 1rem;
-  /* color: #e760ba; */
   color: #2b2627;
 }
 
@@ -27,10 +26,10 @@
 }
 .SpanStyle {
   word-break: break-word;
-  width: 335px;
+  width: 32rem;
 }
 .Button {
-  margin-right: 2px;
+  margin-right: 0.5rem;
   font-weight: bold;
   color: #e760ba;
   background-color: #d9aae2;
@@ -46,7 +45,7 @@
   transition: all 0.5s ease-out;
 }
 .Button2 {
-  margin-right: 2px;
+  margin-right: 0.8rem;
   color: #e760ba;
   background-color: #d9aae2;
   border: none;
@@ -59,4 +58,19 @@
   background-color: azure;
   color: #e760ba;
   transition: all 0.5s ease-out;
+}
+
+@media (max-width: 768px) {
+  .SpanStyle {
+    width: 570px;
+  }
+}
+
+@media (max-width: 414px) {
+  .Button {
+    padding: 3px 9px;
+  }
+  .Button2 {
+    padding: 3px 9px;
+  }
 }
